[gd_scene load_steps=3 format=3 uid="uid://c8xgk7wqr6d8h"]

[ext_resource type="Script" path="res://scenes/dungeon_viewer.gd" id="1_viewer"]
[ext_resource type="Script" path="res://scripts/dungeon_generator.gd" id="2_generator"]

[node name="DungeonViewer" type="Node2D"]
script = ExtResource("1_viewer")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TileContainer" type="Node2D" parent="."]

[node name="DungeonGenerator" type="Node" parent="."]
script = ExtResource("2_generator")

[node name="UI" type="CanvasLayer" parent="."]

[node name="InfoLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 150.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_font_sizes/font_size = 14
text = "Controls:
Mouse Wheel: Zoom
Right Click + Drag: Pan
Arrow Keys: Pan
R: Regenerate

Generating dungeon..."
